fix z-index of about me section

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
   top: -100px;
   left: 0;
   width: 100%;
+  z-index: 10000;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -130,17 +131,13 @@ header.slideIn {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: -1;
   height: 700px;
   opacity: 0;
-  transform: translateY(50px);
   transition: all 1s ease-out;
 }
 
 .aboutme.fade-in {
-  z-index:
   opacity: 1;
-  transform: translateY(0);
 }
 
 .aboutme > p {
